--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 
 <title> Welcome Page</title>
 
-<body><p> This is a test page</p></body>
+<body><p> This is a original  page</p></body>
 
 </html>
